src/testData/commands/errors/parent/test_usableAsAppCommand.ts
import { defineCommand } from "../../../../definitions.js";

export default defineCommand({
    key: "test_usableAsAppCommand",
    interactionCommand: true,
    handler: () => { }
});
